--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" style="margin: 0; background: #121220; color: #e0e0e0">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
